# lambda-export-loggroups-to-s3

./: Cargo.toml  README.md  build.sh  test.json
.github/workflows/: ci.yml
src/: event.rs  main.rs
src/aws/: lambda.rs  logs.rs
