[package]
name = "lambda-export-loggroups-to-s3"
version = "0.2.1"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Exports CloudWatch LogGroups to S3 once a day"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mettke/lambda-export-loggroups-to-s3"
readme = "./README.md"
keywords = ["lambda", "AWS", "CloudWatch", "log group", "export", "S3"]
categories = ["command-line-utilities"]
resolver = "2"

[features]
test = ["lambda-runtime-types/test"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lambda-runtime-types = { version = "0.6", default-features = false }
log = "0.4"
rand = "0.8"
rusoto_core = "0.47"
rusoto_lambda = "0.47"
rusoto_logs = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "2"
tokio = "1"
